@@ -11,7 +11,7 @@
 \alias{ZTransform,SummarizedExperiment-method}
 \alias{relAbundanceCounts}
 \alias{relAbundanceCounts,SummarizedExperiment-method}
-\title{Transform Counts}
+\title{Transform counts}
 \usage{
 transformSamples(
   x,
@@ -19,7 +19,8 @@ transformSamples(
   method = c("clr", "rclr", "hellinger", "log10", "pa", "rank", "relabundance"),
   name = method,
   pseudocount = FALSE,
-  threshold = 0
+  threshold = 0,
+  ...
 )
 
 \S4method{transformSamples}{SummarizedExperiment}(
@@ -28,7 +29,8 @@ transformSamples(
   method = c("clr", "rclr", "hellinger", "log10", "pa", "rank", "relabundance"),
   name = method,
   pseudocount = FALSE,
-  threshold = 0
+  threshold = 0,
+  ...
 )
 
 transformCounts(
@@ -37,7 +39,8 @@ transformCounts(
   method = c("clr", "rclr", "hellinger", "log10", "pa", "rank", "relabundance"),
   name = method,
   pseudocount = FALSE,
-  threshold = 0
+  threshold = 0,
+  ...
 )
 
 \S4method{transformCounts}{SummarizedExperiment}(
@@ -46,7 +49,8 @@ transformCounts(
   method = c("clr", "rclr", "hellinger", "log10", "pa", "rank", "relabundance"),
   name = method,
   pseudocount = FALSE,
-  threshold = 0
+  threshold = 0,
+  ...
 )
 
 transformFeatures(
@@ -97,8 +101,6 @@ methods \code{method = "clr"}, \code{method = "hellinger"}, or
 
 \item{threshold}{A numeric value for setting threshold for pa transformation.
 By default it is 0. (Only used for \code{method = "pa"})}
-
-\item{...}{additional arguments}
 }
 \value{
 \code{transformCounts}, \code{transformSamples}, \code{transformFeatures},
