@@ -30,3 +30,4 @@ Changes in version 1.3.x
 + bugfix: getExperimentCrossCorrelation's calculates correlations correctly with features named equally
 + added new skin microbiome example data set 'peerj13075'
 + added splitOn and unsplitOn functions
++ bugfix: transformSamples: option for disabling relative tranfromation in CLR
